# packt-python_for_finance_cookbook

./: pyproject.toml
01_acquiring_financial_data/: yahoo.py
