[tool.poetry]
name = "packt-python-for-finance-cookbook"
version = "0.1.0"
description = "Python for Finanace cookbook by packtpub"
authors = ["Arun Kr. Khattri <arunkhattri@outlook.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "packt_python_for_finance_cookbook"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
numpy = "^1.23.4"
yfinance = "^0.1.77"
matplotlib = "^3.6.1"
seaborn = "^0.12.0"
scipy = "^1.9.2"
scikit-learn = "^1.1.2"
mplfinance = "^0.12.9b1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pyflakes = "^2.5.0"
isort = "^5.10.1"
pytest = "^7.1.3"
pylint = "^2.15.4"
ipython = "^8.5.0"
jupyterlab = "^3.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
